Revision history for Datahub-Factory

{{$NEXT}}

    - Added: fixes #61 break after finite number of records in transport.
    - Fixed: issue #60 concatenation error when a HTTP error is thrown.
    - Fixed: issue #59 Error when adding only one fixer when Fix plugin is used.
    - Added: support display parameter for Catmandu::CA.

1.73  2017-11-30 12:03:28 CET

    - Changed: added a General block to the configuration.
    - Changed: added splitted configuration files.
    - Fixed: indexer throws an ugly perl error for Catmandu::HTTPError.
    - Changed: generate README.md from separate POD documentation.
    - Proposed fix for missing prereqs as reported by CPANTS.
    - Fixed #51: Non-existing pipeline.ini should return proper error message. 
    - Added: documentation for the Datahub::Factory::Flash command.
    - Added: documentation for the Index command.

1.72  2017-10-06 15:19:32 CEST

    - Changed: removed conf folder.
    - Changed: removed documentation folder.
    - Added: .perltidyrc and .tidyallrc
    - Changed: flexible configuration based on a local datahubfactory.yml file.
    - Changed: fixes #48 Log4perl throws forgot to call init() error.
    - Changed: processing the output of the Solr indexer. Added error handling.
    - Added: dhconveyor index command with a basic Solr indexer.
    - Changed: Pipeline configuration is now polymorphic to cater different pipeline formats.
    - Fixed: missing Log::Any::Adapter::Log4perl dependency.

1.71  2017-09-06 10:54:08 CEST

    - Fixed: Licensing via GPv3 on milla release.
    - Fixed: missing Moose::Role.

1.70  2017-09-05 14:03:04 CEST

    - Changed: improved milla / dzil release flow.
    - Added: missing dependencies for testing in cpanfile.
    - Added: first iteration for .travis.yml file.
    - Changed: Clean up use imports for all modules.
    - Changed: Moved dhconveyor executable from script/ to bin/ directory for Module::Build.
    - Changed: Use Module::Build instead of Module::Build::Tiny.